# s3-objects-tracker

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
s3_objects_tracker/: __init__.py  tracker.py
tests/: conftest.py  test_tracker.py
