[tool.poetry]
name = "object-storage-adapter"
version = "0.4.0"
description = "Provides a storage adapter for S3"
authors = ["Vladimir Vyazovetskov <erhosen@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
aiobotocore = "^2.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
