[tool.poetry]
name = "s3-objects-tracker"
version = "0.1.0"
description = "Track already processed objects inside your s3 bucket."
authors = ["Vladimir Vyazovetskov <erhosen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ErhoSen/s3-objects-tracker"
repository = "https://github.com/ErhoSen/s3-objects-tracker"
keywords = ["objects storage", "s3", "tracker", "published objects", "published objects tracker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.9"
aiobotocore = "^2.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
